# ChangeLog for net-dns/pdns-recursor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns-recursor/ChangeLog,v 1.35 2010/02/21 21:47:01 swegener Exp $

  21 Feb 2010; Sven Wegener <swegener@gentoo.org>
  -pdns-recursor-3.1.7.ebuild,
  -files/pdns-recursor-3.1.7-boost-1.37.0.patch,
  -pdns-recursor-3.1.7.1.ebuild,
  -files/pdns-recursor-3.1.7.1-error-message.patch,
  -files/pdns-recursor-3.1.7-error-message.patch:
  Cleanup.

  01 Feb 2010; Markus Meier <maekke@gentoo.org>
  pdns-recursor-3.1.7.2.ebuild:
  amd64 stable, bug #299942

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  pdns-recursor-3.1.7.2.ebuild:
  stable x86, security bug 299942

*pdns-recursor-3.1.7.2 (08 Jan 2010)

  08 Jan 2010; Sven Wegener <swegener@gentoo.org>
  +pdns-recursor-3.1.7.2.ebuild,
  +files/pdns-recursor-3.1.7.2-error-message.patch:
  Version bump, security bug #299942.

  14 Nov 2009; Sven Wegener <swegener@gentoo.org>
  pdns-recursor-3.1.7.ebuild, pdns-recursor-3.1.7.1.ebuild:
  Move boost to DEPEND-only, bug #293076.

*pdns-recursor-3.1.7.1 (03 Aug 2009)

  03 Aug 2009; Sven Wegener <swegener@gentoo.org>
  +pdns-recursor-3.1.7.1.ebuild,
  +files/pdns-recursor-3.1.7.1-error-message.patch:
  Version bump.

  04 Jul 2009; Sven Wegener <swegener@gentoo.org>
  -pdns-recursor-3.1.6.ebuild, -files/pdns-recursor-3.1.6-gcc-4.3.patch:
  Cleanup.

  31 May 2009; Markus Meier <maekke@gentoo.org> pdns-recursor-3.1.7.ebuild:
  amd64 stable, bug #270627

  26 May 2009; Christian Faulhammer <fauli@gentoo.org>
  pdns-recursor-3.1.7.ebuild:
  stable x86, bug 270627

  20 May 2009; Sven Wegener <swegener@gentoo.org>
  pdns-recursor-3.1.7.ebuild, +files/pdns-recursor-3.1.7-boost-1.37.0.patch:
  Add compability patch for boost-1.37.0, bug #270623.

  06 Oct 2008; Sven Wegener <swegener@gentoo.org>
  +files/pdns-recursor-3.1.7-error-message.patch,
  pdns-recursor-3.1.6.ebuild, pdns-recursor-3.1.7.ebuild: