@@ -2,6 +2,8 @@ AUX pdns-recursor-3.1.7.2-error-message.patch 463 RMD160 882dc9fe0e92d41e7987a69
 AUX precursor 580 RMD160 71be0984e72763e09173b81f7a76bb5df56667a6 SHA1 ea316b070e8eb123f02e24cd60c568b4dd5aefc6 SHA256 f17d76262bea558604fa01e9d661bbb54af387bd976b54a8a59f7ad4a5a56014
 AUX recursor.conf 452 RMD160 6708700e955dd29041e360d5f0a68c9d3293d665 SHA1 455cbbd4335dbd032b2274498044ba680693d306 SHA256 b36b3310a26785d5e8a38c03bce9afcf8a08e321a81ee385e9557dcaa3957255
 DIST pdns-recursor-3.1.7.2.tar.bz2 174082 RMD160 2a1118763ab630646b9ba25273d6066e380e55c6 SHA1 9dcaca50fe0c373d601e135a78f24f5b85480020 SHA256 0f2fd93eec8d7c68578fbf1f680f6d1ab44c3249f0a08257a4e6531e48a9d2ea
+DIST pdns-recursor-3.2.tar.bz2 139569 RMD160 464ad5f89c2e012864e35ec80ab9c83a3932cda2 SHA1 333834cb4db464a3fb8cd3d587957214ceca7887 SHA256 1994140bf0816ef16fe5c8fe9956737a8f7445041adc3d8bc4d0795b2c50c0de
 EBUILD pdns-recursor-3.1.7.2.ebuild 1376 RMD160 6c3bf7e2769c3cbca3b655dab5ff2b2c152827ea SHA1 c219457d6b316aabb719613d068f1601d7f6624c SHA256 547a96290f9127d7830476724a2cffef6bf641b70f18342e0b93b3ea639bebed
-MISC ChangeLog 5858 RMD160 862720b18d02f6674a61922b2ac1969b40872f25 SHA1 e760d52f8a0b1ab376e61179881f20a5e424ae20 SHA256 3a6818372e11699ec1b509cf9b1c03bb8c45f0caa6c97392a91d242abc1fa190
+EBUILD pdns-recursor-3.2.ebuild 1398 RMD160 c9535bcd9d2903f580e30dac53721b8fc9c7507c SHA1 38da40810df9e3f6b161ecefc154d79d85617847 SHA256 55a41b8f6359d57ee99c9b1495c5098b3526659e18543bd4373f938f2d93c9d3
+MISC ChangeLog 5986 RMD160 fc972a4461364ff860c981d66067695f0136b6b1 SHA1 66e32205e8a5983be28d3b23eeb5595c017aa87b SHA256 33ddebffd1dbfc8b5fdf441e41db5d54d443731a9b2e390fd6b80dd7e6ff1dcb
 MISC metadata.xml 837 RMD160 2622852a4345606d2ffe85a68f50f332a1dbd696 SHA1 4b574c68576b1c058956085df7a07e250361455c SHA256 742f9fd882ba627c0a7b26dff7fe7b439b8ccf728a1394725bbd85f2a28a7d4b
