@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/pdns-recursor
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns-recursor/ChangeLog,v 1.35 2010/02/21 21:47:01 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns-recursor/ChangeLog,v 1.36 2010/03/08 20:38:16 swegener Exp $
+
+*pdns-recursor-3.2 (08 Mar 2010)
+
+  08 Mar 2010; Sven Wegener <swegener@gentoo.org> +pdns-recursor-3.2.ebuild:
+  Version bump.
 
   21 Feb 2010; Sven Wegener <swegener@gentoo.org>
   -pdns-recursor-3.1.7.ebuild,
